<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">projectpertama</string>
    <string name="selamat_datang_di_upn_veteran_jawa_timur">Selamat datang di UPN VeteranJawa Timur</string>
    <string name="_2020">2020</string>
    <string name="oktania_purwaningrum_18082010029">Oktania Purwaningrum 18082010029</string>
    <string name="textview">Selamat Datang Di UPN \"Veteran\" Jawa Timur</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="button">LOGIN</string>
    <string name="button1">SIGN UP</string>
    <string name="textview1">Oktania Purwaningrum</string>
    <string name="textview2">18082010029</string>
    <string name="textview3">2020</string>
</resources>